@@ -236,3 +236,4 @@ https://www.ettoday.net/news/20200515/1714580.htm
 https://turnnewsapp.com/global/politics/181551.html
 https://turnnewsapp.com/global/politics/181497.html
 https://www.setn.com/News.aspx?NewsID=765598
+https://www.twreporter.org/a/hong-kong-national-security-law-goes-into-effect
